# gen-ai-finops

./: .dockerignore  DEMO_GUIDE.md  Dockerfile.backend  FRONTEND_README.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  README_DOCKER.md  docker-compose.yml  index.html  package-lock.json  package.json
frontend/: .dockerignore  Dockerfile  nginx.conf
gen_ai_finops/: .env.example  API.md  DATABASE_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  SETUP.md  alembic.ini  env.example  main.py  pyproject.toml  requirements.txt  test_basic.py  test_integration.py  validate_implementation.py
gen_ai_finops/agents/: architect.py  oracle.py  scraper.py
gen_ai_finops/alembic/: env.py
gen_ai_finops/alembic/versions/: 001_initial_users.py
gen_ai_finops/api/: __init__.py  main.py  models.py
gen_ai_finops/data/: pricing_schema.json
gen_ai_finops/db/: __init__.py  crud.py  database.py  models.py
gen_ai_finops/scripts/: create_admin_user.py
gen_ai_finops/tests/: README.md  conftest.py  test_agents.py  test_api.py  test_auth.py  test_db.py  test_integration.py  test_logger.py  test_rate_limit.py  test_utils.py
gen_ai_finops/utils/: auth.py  data_normalizer.py  logger.py  pricing_knowledge_base.py  rate_limit.py
src/: App.tsx  index.css
src/components/: Layout.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
src/pages/: Architect.tsx  Dashboard.tsx  Oracle.tsx
src/services/: api.ts
src/types/: api.ts
